--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="mniTeam">Team(test)</string>
     <string name="mniGerman">Deutsch</string>
     <string name="mniEnglish">English</string>
-    <string name="mniLogin">Login</string>
+    <string name="mniLogin">Logout</string>
     <string name="mniAdd">Add Player</string>
     <string name="mniAddGame">Add Game</string>
     <string name="mniEdit">Edit Userdata</string>
@@ -53,7 +53,7 @@
     <string name="preference_category_webservice">Webservice</string>
     <string name="preference_webservice_ip_title">IP</string>
     <string name="preference_webservice_ip_summary">Webservice ip address</string>
-    <string name="preference_webservice_ip_default">192.168.0.1</string>
+    <string name="preference_webservice_ip_default" translatable="false">192.168.0.1</string>
     <string name="preference_webservice_port_title">Port</string>
     <string name="preference_webservice_port_summary">Webservice port</string>
     <string name="preference_webservice_port_default" translatable="false">8080</string>
@@ -163,4 +163,12 @@
     <string name="PosDefAbbrev">D</string>
     <string name="PosAtkAbbrev">A</string>
     <string name="PositionAbbrev">P</string>
+    <string name="preference_category_user_title">User</string>
+    <string name="preference_user_username_default" translatable="false">admin</string>
+    <string name="preference_user_username_summary">Username</string>
+    <string name="preference_user_username_title">Username</string>
+    <string name="preference_user_password_default" translatable="false">admin</string>
+    <string name="preference_user_password_summary">Password</string>
+    <string name="preference_user_password_title">Password</string>
+    <string name="preference_user_autologin">Autologin</string>
 </resources>
