--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,9 @@
     <string name="msg_IllegalPassword">Password must only contain letters and numbers</string>
     <string name="msg_IllegalRemark">Remark must only contain letters and numbers</string>
     <string name="msg_TooManyGoalies">Only one Goalkeeper is allowed per team</string>
+    <string name="msg_NoPlayersToAssign">No players to assign</string>
+    <string name="msg_CannotAssignGoalie">Goalkeeper cannot be assigned</string>
+    <string name="msg_TooManyGoalkeeperOnlyPlayers">There are more than 2 players who can only play as Goalkeeper</string>
 
     <!--Nav Drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
