addition: double press to exit

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -158,4 +158,6 @@
     <string name="PosDefAbbrev">V</string>
     <string name="PosAtkAbbrev">S</string>
     <string name="PositionAbbrev">P</string>
+
+    <string name="msg_DoubleBackPress">Erneut drücken um zu beenden</string>
 </resources>
