--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
     <string name="SelectPlayersForGame">Select Players for the Game</string>
     <string name="Participation">Participation</string>
     <string name="action_settings">Settings</string>
-    <string name= "position">Position</string>
+    <string name="position">Position</string>
 
     <!--Spinner Arrays-->
     <string-array name="spinnerPlayerGameValues">
@@ -175,4 +175,5 @@
     <string name="PositionAbbrev">P</string>
 
     <string name="msg_DoubleBackPress">Press again to exit</string>
+    <string name="title_activity_team_division2">TeamDivision2</string>
 </resources>
