Every webservice access is now asynchronous; (Completely reworked System & Interfaces) Generation of user-specific QR-Code is now asynchronous; Re-organized code structure in Database class to make it better understandable; Small fixes;

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -147,6 +147,11 @@
     <string name="msg_NoPlayersToAsign">Keine Spieler zum aufteilen</string>
     <string name="msg_CannotAssignGoalie">Torwart kann nicht zugewiesen werden</string>
     <string name="msg_TooManyGoalkeeperOnlyPlayers">Es gibt mehr als 2 Spieler, die nur Torwart spielen können</string>
+    <string name="msg_CouldNotInsertGame">Spiel konnte nicht erstellt werden</string>
+    <string name="msg_CouldNotInsertPlayer">Spieler konnte nicht erstellt werden</string>
+    <string name="msg_CouldNotSetPassword">Passwort konnte nicht gesetzt werden</string>
+    <string name="msg_CouldNotUpdateGame">Spiel konnte nicht aktualisiert werden</string>
+    <string name="msg_CouldNotUpdateStats">Statistiken konnten nicht aktualisert werden</string>
 
     <!--Nav Drawer-->
     <string name="navigation_drawer_open">Öffne Menü</string>
