Finalized Offline mode; Updated WebService (small adjustments for offline mode to work smoother; implemented GeoLocation methods) Updated WebService documentation;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,7 @@
     <string name="msg_ConfirmGameDeletion">Do you really want to delete this game ?</string>
     <string name="msg_ConfirmPlayerDeletion">Do you really want to delete player \'%s\' ?</string>
     <string name="msg_DataSavedLocally">Data saved locally</string>
+    <string name="msg_CannotDeletePlayerInLocalGame">Cannot delete player who is participating in locally saved game</string>
 
     <!--Nav Drawer-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
