--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -181,4 +181,6 @@
     <string name="msg_dialogDeletePlayer">Wollen Sie Spieler \'%s\' wirklich löschen?</string>
     <string name="player">Spieler</string>
     <string name="title_activity_main"></string>
+    <string name="title_activity_site_notice">Impressum</string>
+    <string name="nav_site_notice_title">Impressum</string>
 </resources>
